...

@DayNightPreviews
@Composable
private fun CheckboxRowPreview1() {
    ThemePreview {
        CheckboxRow(
            label = "Export 5 routes",
            checked = true
        )
    }
}

@DayNightPreviews
@Composable
private fun CheckboxRowPreview2() {
    ThemePreview {
        CheckboxRow(
            label = "Export 0 routes",
            checked = false,
            enabled = false
        )
    }
}

